Fix 'open access' build warning in spring-pulsar-docs