@@ -57,6 +57,9 @@ tasks.withType(org.asciidoctor.gradle.jvm.AbstractAsciidoctorTask) {
 	asciidoctorj {
 		fatalWarnings = ['^((?!successfully validated).)*$']
 	}
+	forkOptions {
+		jvmArgs "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED", "--add-opens", "java.base/java.io=ALL-UNNAMED"
+	}
 }
 
 asciidoctor {
